--- a/app/locale/pt_BR/LC_MESSAGES/django.po
+++ b/app/locale/pt_BR/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-04-01 16:52-0300\n"
+"POT-Creation-Date: 2025-04-15 14:18-0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -19,12 +19,11 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
 #: .\authors\forms\login_form.py:6 .\authors\forms\register_form.py:20
-#: .\authors\tests\test_authors_login_form.py:9
+#: .\authors\tests\test_authors_login.py:11
 msgid "Username"
-msgstr "Nome de Usúario"
+msgstr "Nome de Usuário"
 
-#: .\authors\forms\login_form.py:8
-#: .\authors\tests\test_authors_login_form.py:10
+#: .\authors\forms\login_form.py:8 .\authors\tests\test_authors_login.py:12
 msgid "Password"
 msgstr "Senha"
 
@@ -53,55 +52,79 @@ msgid "Last name"
 msgstr "Sobrenome"
 
 #: .\authors\forms\register_form.py:42 .\authors\models.py:6
-#: .\authors\tests\test_authors_register_form.py:11
+#: .\authors\tests\test_authors_register.py:11
 msgid "Date of birth"
 msgstr "Data de Nascimento"
 
 #: .\authors\forms\register_form.py:47 .\authors\models.py:7
-#: .\authors\tests\test_authors_register_form.py:12
+#: .\authors\tests\test_authors_register.py:12
 msgid "Gender"
 msgstr "Gênero"
 
 #: .\authors\forms\register_form.py:53
-#: .\authors\tests\test_authors_register_form.py:33
+#: .\authors\tests\test_authors_register.py:33
 msgid "This username is already in use"
-msgstr "Este nome de usúario já está em uso."
+msgstr "Este nome de usuário já está em uso."
 
 #: .\authors\forms\register_form.py:55
-#: .\authors\tests\test_authors_register_form.py:41
+#: .\authors\tests\test_authors_register.py:41
 msgid "Username must be alphanumeric"
-msgstr "O nome de usúario precisa ser alfanúmerico."
+msgstr "O nome de usuário precisa ser alfanúmerico."
 
 #: .\authors\forms\register_form.py:61
-#: .\authors\tests\test_authors_register_form.py:50
+#: .\authors\tests\test_authors_register.py:50
 msgid "This email is already in use"
 msgstr "Este e-mail já está em uso."
 
-#: .\authors\views.py:38
-#: .\tests\functional_tests\authors\test_register_page.py:21
-msgid "User registered successfully"
-msgstr "Usúario registrado com sucesso"
+#: .\authors\tests\test_authors_login.py:23 .\authors\views.py:74
+msgid "Invalid username or password"
+msgstr "Nome de Usuário ou senhas inválidos"
 
-#: .\authors\views.py:65 .\tests\functional_tests\authors\test_login_page.py:30
-msgid "Login successful"
-msgstr "Usúario foi conectado com sucesso"
-
-#: .\authors\views.py:70
+#: .\authors\tests\test_authors_login.py:30 .\authors\views.py:71
 msgid "Invalid credentials"
 msgstr "Credencias inválidas"
 
-#: .\authors\views.py:73
-msgid "Invalid username or password"
-msgstr "Nome de Usúario ou senhas inválidos"
+#: .\authors\views.py:39
+msgid "User registered successfully"
+msgstr "Usuário registrado com sucesso"
 
-#: .\authors\views.py:79
+#: .\authors\views.py:66
+msgid "Login successful"
+msgstr "Usuário foi conectado com sucesso"
+
+#: .\authors\views.py:81
 msgid "User has been logged out"
-msgstr "O usúario foi desconectado com sucesso"
+msgstr "O usário foi desconectado com sucesso"
 
-#: .\publications\models.py:7
-msgid "Text"
-msgstr "Texto"
+#: .\profiles\forms.py:7 .\profiles\tests\test_new_publication.py:13
+msgid "Text publication"
+msgstr "Texto da publicação"
 
-#: .\publications\models.py:8
+#: .\profiles\forms.py:11 .\profiles\tests\test_new_publication.py:14
+#: .\publications\models.py:10
 msgid "Image"
 msgstr "Imagem"
+
+#: .\profiles\models.py:11
+msgid "Picture"
+msgstr "Foto de perfil"
+
+#: .\profiles\models.py:12
+msgid "Bio"
+msgstr "Biográfia"
+
+#: .\profiles\models.py:16
+msgid "Profile"
+msgstr "Perfil"
+
+#: .\profiles\models.py:17
+msgid "Profiles"
+msgstr "Perfis"
+
+#: .\profiles\views.py:57
+msgid "Unable to create publication"
+msgstr "Não foi possivel criar a publicação"
+
+#: .\publications\models.py:9 .\publications\models.py:21
+msgid "Text"
+msgstr "Texto"
